--- a/socialnetworkwindow.ui
+++ b/socialnetworkwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1000</width>
+    <width>808</width>
     <height>850</height>
    </rect>
   </property>
@@ -17,7 +17,7 @@
    <widget class="QTextEdit" name="nameTextEdit">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>350</x>
       <y>240</y>
       <width>104</width>
       <height>71</height>
@@ -37,10 +37,10 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <widget class="QLabel" name="enterNameLabel">
     <property name="geometry">
      <rect>
-      <x>310</x>
+      <x>350</x>
       <y>210</y>
-      <width>141</width>
-      <height>16</height>
+      <width>121</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -50,7 +50,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <widget class="QPushButton" name="loginButton">
     <property name="geometry">
      <rect>
-      <x>320</x>
+      <x>350</x>
       <y>320</y>
       <width>100</width>
       <height>32</height>
@@ -69,10 +69,10 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <widget class="QLabel" name="profileLabel">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>330</x>
       <y>110</y>
       <width>171</width>
-      <height>20</height>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
@@ -87,71 +87,6 @@ li.checked::marker { content: &quot;\2612&quot;; }
       <width>256</width>
       <height>192</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="recentPost1">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>430</y>
-      <width>771</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Recent Post 1</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="recentPost2">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>470</y>
-      <width>771</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Recent Post 2</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="recentPost3">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>510</y>
-      <width>781</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Recent Post 3</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="recentPost4">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>550</y>
-      <width>781</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Recent Post 4</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="recentPost5">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>590</y>
-      <width>781</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Recent post 5 </string>
     </property>
    </widget>
    <widget class="QLabel" name="friendsLabel">
@@ -183,7 +118,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <widget class="QTableWidget" name="suggestionsTable">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>530</x>
       <y>160</y>
       <width>256</width>
       <height>192</height>
@@ -193,8 +128,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <widget class="QLabel" name="suggestionsLabel">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>120</y>
+      <x>610</x>
+      <y>110</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -219,7 +154,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <widget class="QTextEdit" name="searchBar">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>290</x>
       <y>30</y>
       <width>221</width>
       <height>31</height>
@@ -229,7 +164,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <widget class="QPushButton" name="searchButton">
     <property name="geometry">
      <rect>
-      <x>480</x>
+      <x>520</x>
       <y>30</y>
       <width>51</width>
       <height>32</height>
@@ -242,7 +177,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <widget class="QLabel" name="searchWarningLabel">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>360</x>
       <y>70</y>
       <width>91</width>
       <height>16</height>
@@ -291,13 +226,168 @@ li.checked::marker { content: &quot;\2612&quot;; }
      <string>Trending</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="postButton1">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>420</y>
+      <width>771</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string>Recent Post 1</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="postButton5">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>620</y>
+      <width>771</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string>Recent Post 5</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="postButton4">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>570</y>
+      <width>771</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string>Recent Post 4</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="postButton3">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>520</y>
+      <width>771</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string>Recent Post 3</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="postButton2">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>470</y>
+      <width>771</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="text">
+     <string>Recent Post 2</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="clickedPostLabel">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>90</y>
+      <width>801</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
+    <property name="text">
+     <string>                                                                                                  Clicked Post Text Here</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="likeButton">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>140</y>
+      <width>64</width>
+      <height>64</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>🤍</string>
+    </property>
+    <property name="flat">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="likesLabel">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>210</y>
+      <width>81</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>0000000</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1000</width>
+     <width>808</width>
      <height>24</height>
     </rect>
    </property>
