--- a/socialnetworkwindow.ui
+++ b/socialnetworkwindow.ui
@@ -105,8 +105,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <widget class="QPushButton" name="backButton">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>632</y>
+      <x>770</x>
+      <y>670</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -141,8 +141,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <widget class="QPushButton" name="addFriendButton">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>600</y>
+      <x>750</x>
+      <y>640</y>
       <width>81</width>
       <height>32</height>
      </rect>
@@ -236,7 +236,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
      </rect>
     </property>
     <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
     </property>
     <property name="autoFillBackground">
      <bool>false</bool>
@@ -258,7 +258,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
      </rect>
     </property>
     <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
     </property>
     <property name="autoFillBackground">
      <bool>false</bool>
@@ -280,7 +280,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
      </rect>
     </property>
     <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
     </property>
     <property name="autoFillBackground">
      <bool>false</bool>
@@ -302,7 +302,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
      </rect>
     </property>
     <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
     </property>
     <property name="autoFillBackground">
      <bool>false</bool>
@@ -324,7 +324,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
      </rect>
     </property>
     <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
+     <enum>Qt::LayoutDirection::LeftToRight</enum>
     </property>
     <property name="autoFillBackground">
      <bool>false</bool>
